# x86_64-kernel-rust-learning

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: allocator.rs  commands.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  shell.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
