[package]
name = "os"
version = "0.1.0"
edition = "2024"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-timeout = 300
test-success-exit-code = 33
[[bin]]
name = "os"
test = true
bench = false

[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
pc-keyboard = "0.7.0"
pic8259 = "0.10.1"
uart_16550 = "0.2.0"
x86_64 = "0.14.2"
spin = "0.5.2"
bootloader = { version = "0.9", features = ["map_physical_memory"]}
volatile = "0.2.6"
